# msvg-project

./: README.md  pyproject.toml
docs/: Option Pricing Using Variance Gamma Markov Chains.md
msvg/: __init__.py  calibration.py  markov_chain.py  option_pricing.py  utils.py  vg_process.py
notebooks/: 01_vg_simulation.ipynb  paper_replication.ipynb
