[project]
name = "msvg"
version = "0.1.0"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "matplotlib",
    "py-vollib-vectorized @ git+https://github.com/ortap/py_vollib_vectorized.git",
    "seaborn",
    "pandas",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["msvg*"]

